add sections using and notes